# rizz-reborn

./: .env.example  .gitignore  CHANGELOG.md  PROJECT.md  README.md  README_EN.md  pyproject.toml  pytest.ini  requirements-dev.txt
.github/workflows/: tests.yml
docs/: PRD.md
docs/wechat-export/: README.md
src/rizz_reborn/: __init__.py  cli.py  wechat_export.py
src/simp_project/: __init__.py  cli.py
tools/: time_tracker.py
