[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rizz-reborn"
version = "0.1.0"
description = "rizz-reborn: WeChat export analysis plus Codex relationship-analysis workflow."
readme = "PROJECT.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "rizz-reborn contributors" }
]
dependencies = []

[project.scripts]
rizz-reborn = "rizz_reborn.cli:main"
simp = "rizz_reborn.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
